start of mission and event logs

--- a/src/assets/missions/001.md
+++ b/src/assets/missions/001.md
@@ -1,22 +1,25 @@
 001
-mission-name
+catfish
 start
 
 # Mission // #001
 
-## Mission Name
+## Catfish
 
-*“It’s like a treasure hunt, in a way, and you’re a detective.”*  
- – Jeff Warwick
+*“Life is full of surprises, some good, some not so good...”*  
+
 
 # Goals
 
-- xxx.
+- Locate the ship of a lieutenant from the Vector dogs.
+- Acquire the hash-id of the ship.
+- Storm the compound of the Vector Dogs.
 
 # Stakes
 
-- yyy.
+- Information about the greasy-haired man's motives and whereabouts
+- Reputation amongst the higher ups at DIADEM
 
 ---
 
->Flavor Text.
+> Space Station DIADEM 01 is wholly owned by DIADEM CORP. Work contracts are commonly passed along to the VECTOR DOGS, a pirate faction to do the will of DIADEM CORP. The location of the VECTOR DOG's compound is not known to the public. Using whatever means necessary, find their compound, raid it, and inside find key details related to the man that ended your upstart careers with MIRRORSMOKE.
