--- a/src/assets/events/001.md
+++ b/src/assets/events/001.md
@@ -1,6 +1,32 @@
 KICKSTART MY HEART
 LONG RIM
 3.01.5017u
-https://i.imgur.com/TaZYsyU.png
+https://i.imgur.com/SesSYBN.png
 
-To be filled in. **IMPORTANT**.
+**WARFACE** comes to in a shoddy looking medical bay, realizing that he is unable to move. He concentrates on attempting to move one tiny part of his body, attempting to regain control as fast as possible. **Nikolas** awakens next, and attempts to stretch out their limbs after getting what they feel to be an extremely restful sleep. The reality of the situation sets in, causing him to hyperventilate. **Diego** snaps awake next, screaming and shouting obscenities as he swears that he still feels the wounds from the back of his skull, struggling to move his arm to feel the back of his head. **Cassandra** is the last to awaken, realising that her voice has changed to a more metallic, robotic tone. She then sees that her body has been mostly replaced with machinery.
+
+An old gentleman enters the medical bay, cane in hand, wearing a dingy suit. Half of their face seems to have been scarred. The cane itself seems gnarled and almost **HORUS** like in design. **OLDMAN** introduces himself as their mysterious benefactor, having retrieved their biomass from the wreckage of their ship and creating **Flash Clones** of them. He remarks on the fact that the paralyzing agents used to restrain them will wear off in 15 minutes. **WARFACE** takes this to heart, beginning to count down out loud. One by one, he remarks the oddities of each of the squad members. 
+
+**Diego** now has a large barcode on their forehead, obscured by their bangs. **OLDMAN** demonstrates the results of scanning it with a **COMP/CON**, where it immediately crumbles after reading the barcode.
+
+**WARFACE** is revealed to have been injected with alien DNA. During this exchange **WARFACE** is able to throw themselves onto the floor and begin to inch over to the gentleman. During this, **OLDMAN** shoots the back of **WARFACE**'s hand with a large pistol, revealing that the gene splicing has greatly increased his regeneration and metabolism.
+
+**Cassandra** unfortunately had very little biomass left, so anything that wasn't able to be recreated was replaced with machinery, leaving essentially the skull and the spine as the only organic parts of the body. **OLDMAN** also notes that their NHP **Luka** was recovered from the wreckage and is being reinstalled elsewhere.
+
+**Nikolas** is shown to have no real physical defects like the others - but he himself is starting to come to the realization that he is not the original person, and is simply a clone, and that his memories are truly not his own.
+
+**OLDMAN** reveals that they have a shared interest in the destruction of the **Greasy man**, and that they are offering their base of operations to them in exchange for the crew to help with taking this man out. He then walks out of the medical bay, remarking to join him in the hangar when they are ready to talk mission details.
+
+The crew reluctantly agrees to the current arrangement after discussing it amongst themselves, and begins to walk towards the hangar.
+
+---
+
+Inside the hangar, **OLDMAN** reveals the first mission to the crew- getting information from the **VECTOR DOGS** in order to find their compound, where information surrounding their murderer is supposed to be found. He mentions that there is a high ranking Lieutenant aboard the **DIADEM 01** that's looking to score some **Gliss** - a designer drug that is taken from the backs of iridiescent crayfish. He continues to explain that by finding out information about the Lieutenant, they can eventually get access to his ship, and onboard it a **Hash-ID** that will allow them to track their movements, revealing the location of their compound. The drug deal has been agreed to happen within a day, and the crew will be the one to handle the fake trade.
+
+He then glances over at the crew's frames being printed in real time inside the hangar, remarking that things will probably get loud once inside the compound, and starts to head off having briefed them all.
+
+---
+
+The four argue amongst themselves, wondering how to tackle this dealing. Eventually, **Diego** lays out a very optimistic plan.
+
+they will meet the Lieutenant at a nice burger joint within **DIADEM 01**, with **Diego** doing the talking. **Nikolas** will join him, and will attempt to pinch any personal communications device that can reveal the location of the Lieutenant's ship. If this fails, **Diego** will attempt to befriend the Lieutenant to join them on their ship to partake in the festivities **WARFACE** will be on standby as the muscle, just in case something goes wrong. With **Cassandra**'s new appearance, she will be offsite monitoring the conversation, seeing if they can find any hint of where their ship is while the group eats, and hopefully make off with the **Hash-ID** before the Lieutenant returns.
